flux/apps/tracearr/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tracearr-timescale
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://tracearr.multimedia-factory.svc:3000"
    uptime-kuma.io/name: "tracearr-timescale"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Arr Stack"
spec:
  serviceName: tracearr-timescale
  replicas: 1
  selector:
    matchLabels:
      app: tracearr-timescale
  template:
    metadata:
      labels:
        app: tracearr-timescale
    spec:
      containers:
        - name: timescale
          image: timescale/timescaledb-ha:pg18.1-ts2.25.0
          args:
            - postgres
            - -c
            - timescaledb.license=timescale
            - -c
            - timescaledb.max_tuples_decompressed_per_dml_transaction=0
            - -c
            - max_locks_per_transaction=4096
            - -c
            - timescaledb.telemetry_level=off
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /home/postgres/pgdata/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tracearr-timescale-config
