flux/apps/tracearr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracearr-timescale
  namespace: multimedia-factory
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: tracearr-timescale
---
apiVersion: v1
kind: Service
metadata:
  name: tracearr
  namespace: multimedia-factory
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: tracearr
